# GCC-Compiler-Options

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/GCCCompilerOptions/: CXXCompilerOptions.cmake  CompilerFlagSummary.cmake  FortranCompilerOptions.cmake  GCCBaseOptions.cmake
tests/: CMakeLists.txt  dummy.cpp  dummy.f90
